syntax = "proto3";

package notify;

option go_package = "notify.v1;notifyv1";

service SendNotify {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
}

enum NotifyType {
  moderate = 0;
  significant = 1;
  alert = 2;
}

message MailNotify {
  string subject = 1;
  string body = 2;
}

message PhoneNotify {
  string body = 1;
}

message Channels {
  MailNotify mail = 1;
  PhoneNotify phone = 2;
}

message SendMessageRequest {
  string userId = 1;
  NotifyType notifyType = 2;
  Channels channels = 3;
}

message SendMessageResponse{
  string respond = 1;
}

service Users {
 rpc UserPreferences (UserPreferencesRequest) returns (UserPreferencesResponse);
}

message MailApproval {
  bool approval = 1;
}

message PhoneApproval {
  bool approval = 1;
}

message Preferences {
  MailApproval mail = 1;
  PhoneApproval phone = 2;
}

message UserPreferencesRequest {
  string userId = 1;
  Preferences preferences = 2;
}

message UserPreferencesResponse {
  string respond = 1;
}